--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,56 @@
 body {
-  background-color: blue;
-  color: white;
+  background-color: #f9f7fe;
+  font-family: sans-serif;
 }
 h1 {
   text-align: center;
+  font-family: sans-serif;
+  font-size: 36px;
+}
+h2 {
+  margin: 0 0 5px;
+  font-size: 28px;
+}
+.date {
+  opacity: 0.7;
 }
 footer {
   text-align: center;
+  font-size: 18px;
+  color: rgba(0, 0, o, 0.6);
+}
+.container {
+  max-width: 600px;
+  margin: 60px auto;
+  background-color: white;
+  padding: 30px;
+
+  box-shadow: rgba(100 100 111 0.2) 0px 7px 29px 0px;
+  border-radius: 10px;
+}
+.city {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 0;
+  padding: 30px 0;
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.4);
+}
+.city:last-child {
+  border: none;
+}
+.time {
+  font-size: 48px;
+  font-weight: bold;
+}
+.time small {
+  font-size: 24px;
+  vertical-align: middle;
+  line-height: 36px;
+}
+.select {
+  display: block;
+  width: 100px;
+  border-radius: 4px;
+  padding: 10px;
+  font-size: 18px;
 }
